--- a/_config.yml
+++ b/_config.yml
@@ -100,11 +100,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "JaeHyunL"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an **amazing** person."
-  location         : "Somewhere"
-  email            :
+  location         : "Seoul"
+  email            : "swaa23@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
