--- a/_config.yml
+++ b/_config.yml
@@ -232,6 +232,7 @@ plugins:
   - jekyll-feed
   - jekyll-include-cache
   - jekyll-seo-tag
+  - jekyll-theme-hamiltion
 
 # mimic GitHub Pages with --safe
 whitelist:
@@ -240,7 +241,7 @@ whitelist:
   - jekyll-gist
   - jekyll-feed
   - jekyll-include-cache
-
+  - jekyll-theme-hamiltion
 
 # Archives
 #  Type
