remote hamiltion theme

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 # Review documentation to determine if you should use `theme` or `remote_theme`
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 # theme                  : "minimal-mistakes-jekyll"
-# remote_theme           : "mmistakes/minimal-mistakes"
+remote_theme           : "ngzhio/jekyll-theme-hamiltion"
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
@@ -233,6 +233,7 @@ plugins:
   - jekyll-include-cache
   - jekyll-seo-tag
   - jekyll-theme-hamiltion
+  - jekyll-remote-theme
 
 # mimic GitHub Pages with --safe
 whitelist:
