--- a/_config.yml
+++ b/_config.yml
@@ -232,7 +232,7 @@ plugins:
   - jekyll-feed
   - jekyll-include-cache
   - jekyll-seo-tag
-  - jekyll-theme-hamiltion
+#  - jekyll-theme-hamiltion
   - jekyll-remote-theme
 
 # mimic GitHub Pages with --safe
@@ -242,7 +242,7 @@ whitelist:
   - jekyll-gist
   - jekyll-feed
   - jekyll-include-cache
-  - jekyll-theme-hamiltion
+#  - jekyll-theme-hamiltion
 
 # Archives
 #  Type
