--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ analytics:
 # Site Author
 author:
   name             : "JaeHyunL"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+#  avatar           : "/assets/images/bio-photo.jpg"
   bio              : "I am an **amazing** person."
   location         : "Seoul"
   email            : "swaa23@gmail.com"
