--- a/_config.yml
+++ b/_config.yml
@@ -97,11 +97,11 @@ analytics:
     tracking_id          :
     anonymize_ip         : # true, false (default)
 
-name: "이재현"
+name: "JaehyunL"
 
 # Site Author
 author:
-  name: "이재현"
+  name: "JaehyunL"
   avatar           : "https://avatars.githubusercontent.com/u/48937399?v=4"
   bio              : "I am an **amazing** person."
   location         : "Seoul"
