--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,14 +1,16 @@
-- title: About
-  url: /about/
-- title: Years
-  url: /years/
-- title: Categories
-  url: /categories/
-- title: Tags
-  url: /tags/
-- title: More
-  sublinks:
-    - title: FAQ
-      url: /faq/
-    - title: Docs
-      url: /docs/
+# - title: About
+#   url: /about/
+# - title: Years
+#   url: /years/
+# - title: Categories
+#   url: /categories/
+# - title: Tags
+#   url: /tags/
+# - title: More
+#   sublinks:
+#     - title: FAQ
+#       url: /faq/
+#     - title: Docs
+#       url: /docs/
+- title: 티스토리
+  url: https://edudeveloper.tistory.com/
