--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
   instant_search         : # false (default), true
 # SEO Related
-google_site_verification :
+google_site_verification : hnzvHSB7iA9I3spDjK2EwVXOMSi2V_X9Y3gyldEt-P
 bing_site_verification   :
 yandex_site_verification :
 naver_site_verification  :
@@ -92,9 +92,9 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : google # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          :
+    tracking_id          : G-VYG8058RWM
     anonymize_ip         : # true, false (default)
 
 name: "JaehyunL"
